--- a/config/machines/ci/regrid.yaml
+++ b/config/machines/ci/regrid.yaml
@@ -19,7 +19,7 @@ cdo-paths: # to be checked
 # extra is an extra special cdo command to be applied before generating the weights
 grids:
   # default
-  lon_lat:
+  lon-lat:
     space_coord: ["lon", "lat"]
   # target regrid
   r005: r7200x3600
@@ -59,19 +59,19 @@ grids:
 sources:
   IFS:
     test-tco79:
-      default: lon_lat
+      default: lon-lat
       short: test-tco79
     test-fdb:
-      default: lon_lat
+      default: lon-lat
   FESOM:
     test-pi:
-      default: lon_lat
+      default: lon-lat
       original_2d: test-pi-2d
       original_3d: test-pi-3d
   ICON:
     test-healpix:
-      default: lon_lat
+      default: lon-lat
       short: test-healpix
     test-r2b0:
-      default: lon_lat
+      default: lon-lat
       short: test-r2b0
