first lumi attempt to adapt to the regrid structure

--- a/config/machines/lumi/regrid.yaml
+++ b/config/machines/lumi/regrid.yaml
@@ -1,20 +1,27 @@
-weights:
-  path: /pfs/lustrep3/projappl/project_465000454/data/AQUA/weights
-  template: weights_{model}_{exp}_{source}_{method}_{target}_l{level}.nc
-
-areas:
-  path: /pfs/lustrep3/projappl/project_465000454/data/AQUA/areas
-  src_template: cell_area_{model}_{exp}_{source}.nc
-  dst_template: cell_area_{grid}.nc
-
+# This is the default
 paths:
   grids: /pfs/lustrep3/projappl/project_465000454/data/AQUA/grids
+  weights: /pfs/lustrep3/projappl/project_465000454/data/AQUA/weights
+  areas: /pfs/lustrep3/projappl/project_465000454/data/AQUA/areas
 
-cdo-paths:
+# templates
+weights:
+  template_default: weights_{model}_{exp}_{source}_{method}_{target}_l{level}.nc
+  template_grid: weights_{sourcegrid}_{method}_{targetgrid}_l{level}.nc
+areas:
+  template_default: cell_area_{model}_{exp}_{source}.nc
+  template_grid: cell_area_{grid}.nc
+cdo-paths: # to be checked
   download: $grids
-  icon: /pool/data/ICON #WRONG
+  icon: /pool/data/ICON
 
-target_grids:
+# available grids
+# extra is an extra special cdo command to be applied before generating the weights
+grids:
+  # default
+  lon-lat:
+    space_coord: ["lon", "lat"]
+  # target regrid
   r005: r7200x3600
   r010: r3600x1800
   r020: r1800x900
@@ -23,180 +30,132 @@ target_grids:
   r100: r360x180
   r200: r180x90
   r250: r144x72
+  # grids without a path
+  ncells:
+    space_coord: ["ncells"]
+    support_dims: ["cell_corners"]  # dimensions to keep when selecting a single spatial sample
+  # IFS
+  tco399: # notice that tco399 for levante has space_coord: ["cell"]
+    path: $grids/IFS/tco399_grid.nc
+    space_coord: ["value"]
+  tco399-fdb:
+    path: 
+      2d: $grids/IFS/tco399_grid.nc
+      2dm: $grids/IFS/tco399_grid_masked.nc
+    masked_vars:
+      - ci
+      - sst
+    space_coord: ["ncells"]
+    vert_coord: ["2d", "2dm"]  # If the case is more complex than simply "2d" we need to specify this
+  tco79:
+    path: $grids/IFS/tco79_grid.nc
+    space_coord: ["value"]
+  # NEMO
+  eORCA1:
+    path: $grids/NEMO/ORCA1_mesh_sfc_grid_T.nc
+    space_coord: ["cell"]
+    # path: /pfs/lustrep3/scratch/project_465000454/pool/data/IFS/inputs_de_48r1/nemo/V40/eORCA1_Z75/common/mesh_mask.nc
+    # extra:
+    #   - selname,tmask          
+    # space_coord: ["nav_lon", "nav_lat"]
+  # OBSERVATIONS
+  era5-r025:
+    path: 
+      2d: $grids/lonlat/r025_grid.nc
+      2dm: $grids/lonlat/r025_grid_masked.nc
+    masked_vars:
+      - sst
+      - SSTK
+    space_coord: ["lon", "lat"]
+    vert_coord: ["2d", "2dm"]  # If the case is more complex than simply "2d" we need to specify this  
+  osi-saf:
+    space_coord:
+      - xc
+      - yc
+    cellareas: $grids/OSI-SAF/grid_nh.nc
+    cellarea_var: areacello
+    mask: $grids/OSI-SAF/grid_nh.nc
+    mask_var: sftof
+  en4:
+    path:
+      lev: /work/bb1153/b382076/AQUA-archive/grids/EN4/en4-grid.nc
+    space_coord: ["lon", "lat"]
+    vert_coord: ["lev"]
+  aviso:
+    space_coords: ["longitude", "latitude"]
+  woa:
+    path:
+      depth: $grids/WOA18/grid-woa18.nc
+    vert_coord: depth
+    space_coord: ["lon", "lat"]
 
-# extra is an extra special cdo command to be applied before generating the weights
-source_grids:
-  FESOM:
-    test-pi:
-      original_2d:
-        path: ../AQUA_tests_short/grids/pi_griddes_nodes_IFS.nc
-        space_coord: ["nod2"]
-        extra: 
-          - -setgrid,../AQUA_tests_short/grids/pi_griddes_nodes_IFS.nc 
-          - -selname,cell_area
-
+sources:
   IFS:
     tco399-orca025:
-      default:
-        path: $grids/IFS/tco399_grid.nc
-        space_coord: ["value"]
+      default: tco399
     tco79-eORCA1:
-      atm2d:
-        path: $grids/IFS/tco79_grid.nc
-        space_coord: ["value"]
-      atm3d:
-        path: $grids/IFS/tco79_grid.nc
-        space_coord: ["value"]
+      default: tco79
+      # atm2d: tco79
+      # atm3d: tco79
     fdb-tco399:
-      default:
-        path: 
-          2d: $grids/IFS/tco399_grid.nc
-          2dm: $grids/IFS/tco399_grid_masked.nc
-        masked_vars:
-          - ci
-          - sst
-        space_coord: ["ncells"]
-        vert_coord: ["2d", "2dm"]  # If the case is more complex than simply "2d" we need to specify this
+      default: tco399-fdb
     control-1950-devcon:
-      default:
-        space_coord: ["ncells"]
-        support_dims: ["cell_corners"]  # dimensions to keep when selecting a single spatial sample
-      hourly-1deg:
-        space_coord: ["lon", "lat"]
-      6hourly-1deg:
-        space_coord: ["lon", "lat"]
-      monthly-1deg-2d:
-        space_coord: ["lon", "lat"]
-      monthly-1deg-3d:
-        space_coord: ["lon", "lat"]
-      lra-r100-monthly:
-        space_coord: ["lon", "lat"]
+      default: ncells
+      hourly-1deg: lon-lat
+      6hourly-1deg: lon-lat
+      monthly-1deg-2d: lon-lat
+      monthly-1deg-3d: lon-lat
+      lra-r100-monthly: lon-lat
     historical-1990-devcon:
-      default:
-        space_coord: ["ncells"]
-        support_dims: ["cell_corners"]
-      hourly-1deg:
-        space_coord: ["lon", "lat"]
-      6hourly-1deg:
-        space_coord: ["lon", "lat"]
-      monthly-1deg-2d:
-        space_coord: ["lon", "lat"]
-      monthly-1deg-3d:
-        space_coord: ["lon", "lat"]
+      default: ncells
+      hourly-1deg: lon-lat
+      6hourly-1deg: lon-lat
+      monthly-1deg-2d: lon-lat
+      monthly-1deg-3d: lon-lat
+
+  NEMO:
+    tco79-eORCA1: eORCA1
 
   ERA5:
     era5:
-      default:
-        path: 
-          2d: $grids/lonlat/r025_grid.nc
-          2dm: $grids/lonlat/r025_grid_masked.nc
-        masked_vars:
-          - sst
-          - SSTK
-        space_coord: ["lon", "lat"]
-        vert_coord: ["2d", "2dm"]  # If the case is more complex than simply "2d" we need to specify this  
-  NEMO:
-    tco79-eORCA1:
-      default:
-        path: $grids/NEMO/ORCA1_mesh_sfc_grid_T.nc
-        space_coord: ["cell"]
-        # path: /pfs/lustrep3/scratch/project_465000454/pool/data/IFS/inputs_de_48r1/nemo/V40/eORCA1_Z75/common/mesh_mask.nc
-        # extra:
-        #   - selname,tmask          
-        # space_coord: ["nav_lon", "nav_lat"]
+      default: era5-r025
+
   MSWEP:
     past:
-      default:
-        space_coord:
-        - lon
-        - lat
+      default: lon-lat
   
   CERES:
     ebaf-toa42:
-      default:
-        space_coord:
-        - lon
-        - lat
+      default: lon-lat
     ebaf-toa41:
-      default:
-        space_coord:
-        - lon
-        - lat
+      default: lon-lat
     ebaf-sfc41:
-      default:
-        space_coord:
-        - lon
-        - lat
+      default: lon-lat
     ebaf-sfc42:
-      default:
-        space_coord:
-        - lon
-        - lat
+      default: lon-lat
     syn-toa41:
-      default:
-        space_coord:
-        - lon
-        - lat
+      default: lon-lat
 
   OSI-SAF:
     osi-450:
-      nh-monthly:
-        space_coord:
-        - xc
-        - yc
-        cellareas: $grids/OSI-SAF/grid_nh.nc
-        cellarea_var: areacello
-        mask: $grids/OSI-SAF/grid_nh.nc
-        mask_var: sftof
-      nh-daily:
-        space_coord:
-        - xc
-        - yc
-        cellareas: $grids/OSI-SAF/grid_nh.nc
-        cellarea_var: areacello
-        mask: $grids/OSI-SAF/grid_nh.nc
-        mask_var: sftof
-      sh-daily:
-        space_coord:
-        - xc
-        - yc
-        cellareas: $grids/OSI-SAF/grid_sh.nc
-        cellarea_var: areacello
-        mask: $grids/OSI-SAF/grid_nh.nc
-        mask_var: sftof
-      sh-monthly:
-        space_coord:
-        - xc
-        - yc
-        cellareas: $grids/OSI-SAF/grid_sh.nc
-        cellarea_var: areacello
-        mask: $grids/OSI-SAF/grid_nh.nc
-        mask_var: sftof
+      default: osi-saf
+      # nh-monthly: osi-saf
+      # nh-daily: osi-saf
+      # sh-daily: osi-saf
+      # sh-monthly: osi-saf
 
   EN4:
     en4:
-      default:
-        path:
-          lev: $grids/EN4/en4-grid.nc
-        space_coord: ["lon", "lat"]
-        vert_coord: ["lev"]
+      default: en4
 
   AVISO:
     ssh-L4:
-      default:
-        space_coord:
-        - longitude
-        - latitude
+      default: aviso
+
   PHC3:
     phc3:
-      default:
-        space_coord:
-        - lon
-        - lat
+      default: lon-lat
+
   WOA18:
     woa18_2005_2017:
-      default:
-        path:
-          depth: $grids/WOA18/grid-woa18.nc
-        vert_coord: depth
-        space_coord: ["lon", "lat"]
+      default: woa
