--- a/config/machines/levante/regrid.yaml
+++ b/config/machines/levante/regrid.yaml
@@ -1,8 +1,8 @@
-weightspath: &weightspath /work/bb1153/b382075/nextgems/weights #config.yaml
-areaspath: &areaspath /work/bb1153/b382075/nextgems/areas #config.yaml 
-
+# Default paths for regridding
 paths:
   grids: /work/bb1153/b382075/aqua/grids
+  weights: /work/bb1153/b382075/aqua/weights
+  areas: /work/bb1153/b382075/aqua/areas
 
 #templates
 weights:
@@ -12,7 +12,7 @@ areas:
   template_default: cell_area_{model}_{exp}_{source}.nc
   template_grid: cell_area_{grid}.nc
 cdo-paths: # to be checked
-  download: *weightspath
+  download: $weights
   icon: /pool/data/ICON
 
 #available grids
