--- a/diagnostics/tropical_cyclones/config/config_tcs.yaml
+++ b/diagnostics/tropical_cyclones/config/config_tcs.yaml
@@ -2,16 +2,16 @@
 dataset:
   model: "IFS"
   #exp: "tco2559-ng5-cycle3"
-  exp: "tco1279-orca025-cycle3"
-  source2d: "2D_1h_native"
-  source3d: "3D_1h_native"
+  #exp: "tco1279-orca025-cycle3"
+  exp: "control-1950-devcon"
+  source2d: "hourly-native" #"2D_1h_native"
+  source3d: "6hourly-1deg" #"3D_1h_native"
 
 # folders for regridded data, temprorary and stored high res data
 paths: 
-  tmpdir: '/home/b/b382075/work/tc/tmpdir'
-  fulldir: '/home/b/b382075/work/tc/fullres'
-  plotdir: "/home/b/b382075/work/tc/tropical_cyclones/Figures/"
-
+  tmpdir: '/users/pghinass/tc_output/tmpdir'
+  fulldir: '/users/pghinass/tc_output/fullres'
+  plotdir: "/users/pghinass/tc_output/Figures/"
 
 # grid on which operate
 grids:
