--- a/config/machines/lumi/catalog/IFS/historical-1990-devcon.yaml
+++ b/config/machines/lumi/catalog/IFS/historical-1990-devcon.yaml
@@ -64,7 +64,7 @@ sources:
         levtype: pl
         levelist: [1, 5, 10, 20, 30, 50, 70, 100, 150, 200, 250, 300, 400, 500, 600,
           700, 850, 925, 1000]
-        step: 0  # First available step
+        step: 6  # First available step
       data_start_date: 19900101T0000
       data_end_date: 19991231T1800
       aggregation: D  # Default aggregation / chunk size
@@ -94,7 +94,7 @@ sources:
       savefreq: M
       timestep: H
       timestyle: step
-      timeshift: Yes    # shift time of resulting xarray by this amount
+      timeshift: true    # shift time of resulting xarray by this amount
     description: monthly data on r100 grid. Contains tprate(260048), 2t(167), tcc(164),
       sd(141), tciw(79), tclw(78), msl(151), tcwv(137), lcc(186), mcc(187), hcc(188).
     driver: gsv
@@ -121,7 +121,7 @@ sources:
       savefreq: M
       timestep: H
       timestyle: step
-      timeshift: Yes    # shift time of resulting xarray by this amount
+      timeshift: true    # shift time of resulting xarray by this amount
     description: monthly data on r100 grid. Contains u(131), v(132), t(130), r(157),
       w(135), q(133).
     driver: gsv
