--- a/config/machines/levante/regrid.yaml
+++ b/config/machines/levante/regrid.yaml
@@ -117,7 +117,7 @@ grids:
 
   # OBSERVATIONS
   aviso:
-    space_coords: ["longitude", "latitude"]
+    space_coord: ["longitude", "latitude"]
   woa:
     path:
       depth: /work/bb1153/b382076/AQUA-archive/grids/WOA18/grid-woa18.nc
