trigger env recreation

--- a/.github/workflows/aqua.yml
+++ b/.github/workflows/aqua.yml
@@ -84,8 +84,8 @@ jobs:
         with:
           environment-file: environment-common.yml 
           environment-name: aqua
-          cache-downloads: true
-          cache-environment: true
+          cache-downloads: false
+          cache-environment: false
           condarc: |
             channels:
               - conda-forge
