--- a/config/machines/levante/regrid.yaml
+++ b/config/machines/levante/regrid.yaml
@@ -435,6 +435,13 @@ source_grids:
         extra: 
           - -setgrid,/work/bb1153/b382075/aqua/test_datasets/AQUA_tests/grids/pi_griddes_nodes_IFS.nc 
 
+  GPM:
+    imerg:
+      default:
+        space_coord: ["lon", "lat"]
+        extra: 
+          - -selname,precipitationCal
+
   MSWEP:
     past:
       default:
